# python-module-08

ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: .env.example  oracle.py
