[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = "Zion dependency manager and data processing node"
authors = ["Diego Varas <diego@zion.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
