[project]
name = "matrix"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Vargas",email = "divaro_@hotmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
